# sjmm_util

./: .gitignore  LICENSE  README.md  config.py  general_utils.py  pyproject.toml  scuba2_utils.py
astro_utils/: config.py  general_utils.py  scuba2_utils.py
astro_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sjmm_util/: __init__.py  catalog.py  config.py  datatools.py  general_utils.py  line_utils.py  mosfire.py  mydefaults.mplstyle  paper.mplstyle  scuba2_utils.py  sjmdefaults.mplstyle  talk.mplstyle
sjmm_util.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
