requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sjmm_util"
version = "0.2.1"
readme = "README.md"

dependencies = [
 "numpy",
 "pandas",
 "matplotlib",
 "astropy",
 "reproject",
 "scipy",
 "scikit-image"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sjmm_util = ["sjmdefaults.mplstyle"]